# tauri-vrd

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
.cargo/: xxxconfig.toml
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: base.rs  http.rs  mod.rs  work.rs
src-tauri/src/util/: file.rs
src-tauri/static/: five.js  index.html
src/component/: MDEditor.js  MDViewer.js
src/pages/: _app.js  index.js
src/util/: api.js  cache.js  common.js  invoke.js  work.js
