[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = {version = "0.21.2"}
rust-embed="6.7.0"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["full"] }
zip = "0.5.12"
bytes = "1.0"
tar = "0.4"
flate2 = "1.0"
scraper = "0.12.0"
ssh2 = "0.9.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
